[fix] library genesis and image detail modal on mobile

--- a/src/css/searxng.css
+++ b/src/css/searxng.css
@@ -1891,7 +1891,7 @@ td:hover .engine-tooltip,
   }
 }
 #main_results #results.image-detail-open.only_template_images {
-  width: 59.25rem !important;
+  width: min(98%, 59.25rem) !important;
 }
 #main_results #results.only_template_images.image-detail-open #backToTop {
   left: 56.75rem !important;
